styles/globals.css
:root {
  /* Main colors */
  --mainColor: #E5C9C4;
  --secondaryColor: #445069;
  --thirdColor: #CAA69A;
  
  /* Text colors */
  --mainTextColor: #181a36;
  --secondaryTextColor: #324d67;

  /* Light color */
  --lightColor: #d8bdaab3;
  --white: #FFFFFF;
  /* Dark color */
  --darkColor: #191919;

  /* Main font */
  --titleFont: 'Poppins', sans-serif;
  --defaultFont: 'Montserrat', sans-serif;

  /* Borders */
  --border: 1rem;

  /* Box shadow */
  --boxShadow: 0 2px 15px 0 rgba(0, 0, 0, 0.3);
  --boxShadow2: 10px 10px 20px 0 rgba(0, 0, 0, 0.1);

  --gradient: linear-gradient(
    45deg,
    #ffffff,
    #9fa9d1,
    #dbc6aa,
    #ffffff,
    #dda7aa,
    #ffffff
  );
}

html,
body, * {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  box-sizing: border-box;

}
::-webkit-scrollbar {
  width: 0px;
}

@keyframes fadein {
  from { opacity: 0; }
  to   { opacity: 1; }
}

@-webkit-keyframes fadein {
  from { opacity: 0; }
  to   { opacity: 1; }
}

a {
  color: inherit;
  font-size: 12px;
  text-decoration: none;
}
.link{
  transition: all 50ms ease-in-out;
}
.link:hover{
  color: var(--mainColor);
}
.secondary-text{
  font-size: 10px;
  color: gray;
}

.main-container{
max-width: 1300px; 
margin: auto;
width: 100%;

}
.layout{
  padding: 10px;
  overflow: hidden;
}

.navbar-container{
  display: flex;
  justify-content: space-between;
  margin: 6px 18px;
  position: relative;
}
.marquee-text{
  font-size: 29px;
  font-weight: 600;
  margin: 60px 0px;
  color: var(--mainColor);
}
.marquee {
  position: relative;
  height: 400px;
  width: 100%;
  overflow-x: hidden;
}

.track {
  position: absolute;
  white-space: nowrap;
  will-change: transform;
  animation: marquee 15s linear infinite;
  width: 180%;
}
.track:hover {
  animation-play-state: paused;
}
@keyframes marquee {
  from { transform: translateX(0); }
  to { transform: translateX(-50%); }
}

 span.text-red {
    -webkit-text-stroke: 1px var(--mainColor);
    margin-left: 6px;
}
.logo{
  color: gray;
  font-size: 18px;

}
.cart-icon{
  font-size: 25px;
  color: gray;
  cursor: pointer;
  position: relative;
  transition: transform .4s ease;
  border: none;
  background-color: transparent;
}
.cart-icon:hover{
  transform: scale(1.1,1.1);
}
.cart-item-qty{
  position: absolute;
  right: -8px;
  font-size: 11px;
  color: #eee;
  background-color: var(--mainColor);
  padding: 2px 5px;
  border-radius: 50%;
  font-weight: 600;

}
.products-container{
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 15px;
  margin-top: 20px;
  width: 100%;
}
.product-card{
 cursor: pointer;
 transition: transform 0.5s ease;
 color: var(--secondaryTextColor);

}
.product-card > img{
  border-radius: 1rem;
}
.product-card:hover{
  transform: scale(1.1)
}
.product-image{
  border-radius: 15px;
 background-color: #ebebeb;
  transform: scale(1, 1);
  transition: transform 0.5s ease;
}

.product-name{
  font-weight: 500;
}
.product-price{
  font-weight: 800;
  margin-top: 6px;
  color: var(--thirdColor);
}

.hero-banner-container{
  padding: 100px 40px;
  background-color: var(--lightColor);
  border-radius: 15px;
  position: relative;
  height: auto;
  line-height: 0.9; 
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.hero-banner-container .beats-solo{
  color: var(--secondaryTextColor);
  font-size: 20px;
}
.hero-banner-container button{
  border-radius: 10px;
  padding: 10px 2rem;
  margin-top: 2rem;
  background-color: var(--thirdColor);
  color: white;
  border: none;
  font-size: 1rem;
  font-weight: 500;
  cursor: pointer;
  transition: all 300ms ease-in-out;
}

.hero-banner-container button:hover{
  scale: 1.03;
  background-color: var(--white);
  color: var(--thirdColor);
}

.hero-banner-container h3{
  color: var(--secondaryTextColor);
  font-size: 4rem;
  margin-top: 4px;
}
.hero-banner-container h1{
  color: white;
  font-size: 10em;
  margin-left: -20px;
  text-transform: uppercase;
  white-space: nowrap;
}
.hero-banner-image{
  position: absolute;
  top: -15%;
  right: 3%;
  width: 500px;
  animation: transparency 3s infinite alternate;
}
@keyframes transparency {
  from {opacity: 1;}
  to {opacity: 0.2;}
}

.desc{
position: absolute;
right: 3%;
bottom: 5%;
width: 300px;
line-height: 1.3;
display: flex;
flex-direction: column;
color: var(--secondaryTextColor);
z-index: 0;
}
.desc p{
  color: var(--mainTextColor);
  font-weight: 100;
  text-align: end;
  font-weight: bold;

}
.desc h5{
  margin-bottom: 10px;
  font-weight: 700;
  font-size: 16px; 
  align-self: flex-end;
}

.products-heading{
  text-align: center;
  margin: 40px 0px;
  color: var(--secondaryTextColor);

}
.products-heading h2{
  font-size: 40px;
  font-weight: 800;
}
.products-heading p{
  font-size: 16px;
  font-weight: 200;
}
.footer-banner-container{
  padding: 100px 40px;
  background-color: var(--lightColor);
  border-radius: 15px;
  position: relative;
  height: 400px;
  line-height: 1; 
  color: white;
  width: 100%;
  margin-top: 120px;
}
.banner-desc{
  display: flex ;
  justify-content: flex-start;
  gap: 1rem;}
.banner-desc button{
  border-radius: 10px;
  padding: 10px 2rem;
  background-color: white;
  color: var(--thirdColor);
  border: none;
  margin-top: 20px;
  font-size: 18px;
  font-weight: 500;
  transition: all 300ms ease-in-out;
  cursor: pointer;
}
.banner-desc button:hover{
  scale: 1.03;
  background-color: var(--mainColor);
  color: var(--white);
}
.banner-desc .left{
  width: 30%;
}
.banner-desc .left h3{
  font-weight: 900;
  font-size: 80px;
  margin-left: 5px;
}
.banner-desc .left p{
  margin:8px;
}
.footer-banner-image{
  position: absolute;
  top: 55%;
  width: 300px;
  right: 0;
  animation: transparency 3s infinite alternate;

}
.banner-desc .right{
  line-height: 1.1;
}
.banner-desc .right h3{
  font-weight: 800;
  font-size: 60px;
}
/* ... */

